# feagi-data-processing

./: Cargo.toml  README.md
Feagi-Connector-Core/: Cargo.toml
Feagi-Connector-Core/src/: lib.rs
Feagi-Connector-Core/src/caching/: hashmap_helpers.rs  mod.rs
Feagi-Connector-Core/src/caching/motor/: callback_manager.rs  mod.rs
Feagi-Connector-Core/src/caching/sensory/: mod.rs  sensory_cache.rs  sensory_channel_stream_cache.rs
Feagi-Connector-Core/src/data_pipeline/: mod.rs  processor_runner.rs  stream_cache_processor_trait.rs  verify_stream_cache_processor_chain.rs
Feagi-Connector-Core/src/data_pipeline/stages/: identities.rs  image_quick_diff.rs  image_segmentor.rs  image_transformer.rs  ranges.rs  rolling_windows.rs
Feagi-Connector-Core/src/io_processing/: mod.rs
Feagi-Connector-Core/src/io_processing/stream_cache_processors/: stream_cache_processor_trait.rs
Feagi-Data-Serialization/: Cargo.toml
Feagi-Data-Serialization/src/: lib.rs
Feagi-Data-Serialization/src/byte_structure/: feagi_byte_structure.rs  feagi_byte_structure_compatible.rs  feagi_byte_structure_type.rs
Feagi-Data-Serialization/src/implementations/: cortical_mapped_xyzp_neuron_data.rs  feagi_json.rs  mod.rs
Feagi-Data-Structures/: Cargo.toml
Feagi-Data-Structures/src/: error.rs  lib.rs
Feagi-Data-Structures/src/basic_components/: mod.rs  spatial.rs
Feagi-Data-Structures/src/bytes/: feagi_byte_structure.rs  mod.rs
Feagi-Data-Structures/src/data/: feagi_json.rs  image_descriptors.rs  image_frame.rs  mod.rs  readme.md  segmented_image_frame.rs
Feagi-Data-Structures/src/genomic/: cortical_id.rs  cortical_type.rs  descriptors.rs  indexing.rs  mod.rs
Feagi-Data-Structures/src/io_containers/: mod.rs
Feagi-Data-Structures/src/neurons/: coder_type.rs  mod.rs  neuron_coder_type.rs
Feagi-Data-Structures/src/neurons/xyzp/: cortical_mapped_xyzp_neuron_data.rs  mod.rs  neuron_xyzp.rs  neuron_xyzp_arrays.rs
Feagi-Data-Structures/src/processing/: image_frame_processor.rs  image_frame_segmentator.rs  mod.rs
Feagi-Data-Structures/src/templates/: mod.rs  readme.md  sensor_types.rs
Feagi-Data-Structures/src/wrapped_io_data/: mod.rs  wrapped_io_data.rs  wrapped_io_type.rs
(+226 files in other folders)
