[workspace]
members = [
    ".",
    "Feagi-Connector-Core",
    "Feagi-Data-Serialization",
    "Feagi-Data-Structures"
]

[workspace.package] # Shared across all crates
version = "0.0.50-beta.10"
edition = "2024"
license = "Apache-2.0"
description = "A set of core libraries intended for fast data processing for various FEAGI applications"


[workspace.dependencies]
serde_json = "1.0.140"
ndarray = "0.16.1"

[profile.test]
opt-level = 0
debug = true