[package]
name = "Feagi-Connector-Core"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Adds Caching and Processing systems that are used by Feagi Connector"


[dependencies]
ndarray = { workspace = true }
feagi_data_structures = { path = "../Feagi-Data-Structures", package = "Feagi-Data-Structures" }